src/_css/06.components/tag__header.css
.tag-header {
	display: flex;
	position: relative;
	flex-direction: column;
	justify-content: flex-end;
	align-items: center;
	background-position: center;
	background-size: cover;
	padding-bottom: var(--padding__medium);
	overflow: clip;
	color: var(--color__text);

	.tag-metadata {
		position: relative;
		z-index: 10;
		padding: 0 var(--padding__medium);
		width: 100%;
		max-width: var(--max-width__content);

		:last-child {
			margin-bottom: 0;
		}
	}

	.tag-title {
		margin-top: var(--margin__medium);
		margin-bottom: var(--margin__small);
		font-weight: 900;
	}

	.tag-date {
		margin-top: var(--margin__small);
	}

	&:not(.-feature-image) {
		.tag-title {
			/* noinspection CssInvalidPropertyValue */
			@supports (
				(background-clip: text) and
					(background: linear-gradient(120deg, white 0%, black 37.5%, white 100%))
			) {
				background: linear-gradient(
					120deg,
					var(--color__accent-secondary) 0%,
					var(--color__accent) 37.5%,
					var(--color__accent-secondary) 100%
				);
				background-clip: text;
				color: transparent;
			}
		}
	}

	&.-feature-image {
		height: 50vh;
		min-height: 25rem;
		max-height: 50vw;
		color: var(--color__text__contrast);

		&:after {
			position: absolute;
			top: 0;
			left: 0;
			background: var(--color__overlay);
			width: 100%;
			height: 100%;
			content: "";
		}
	}
}

